k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-platform-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-platform-app

  template:
    metadata:
      labels:
        app: devops-platform-app

    spec:
      imagePullSecrets:
        - name: ecr-registry-secret

      containers:
        - name: app
          image: 779686178234.dkr.ecr.ap-southeast-2.amazonaws.com/devops-platform-app:1.0

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
