k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-platform-app

spec:
  selector:
    app: devops-platform-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: LoadBalancer
